--- a/app/src/main/res/layout/single_assessment_recycler_view.xml
+++ b/app/src/main/res/layout/single_assessment_recycler_view.xml
@@ -47,6 +47,14 @@
                 android:gravity="right"
                 android:textColor="@color/colorBlack" />
 
+            <TextView
+                android:id="@+id/clientAssIdStub"
+                android:layout_weight="0"
+                android:layout_height="0dp"
+                android:layout_width="0dp"
+
+                />
+
 
             <Button
                 android:id="@+id/editAssessment"
