--- a/app/src/main/res/layout/fragment_accounting_forms.xml
+++ b/app/src/main/res/layout/fragment_accounting_forms.xml
@@ -18,6 +18,15 @@
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
             android:text="Get Clients" />
+        <ProgressBar
+            android:id="@+id/accountProgressBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:visibility="invisible"
+
+            />
 
     </LinearLayout>
 
