--- a/app/src/main/res/layout/ten_claim_recycler_view.xml
+++ b/app/src/main/res/layout/ten_claim_recycler_view.xml
@@ -17,40 +17,39 @@
             >
 
             <TextView
-                android:id="@+id/recycler_voucher_type"
+                android:id="@+id/ten_voucher_type"
                 android:layout_weight="3"
-                android:layout_marginTop="10dp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="left"
                 android:textColor="@color/colorBlack" />
             <TextView
-                android:id="@+id/claimRedeemedStub"
+                android:id="@+id/ten_claimRedeemedStub"
                 android:layout_weight="0"
                 android:layout_height="0dp"
                 android:layout_width="0dp"
 
                 />
             <TextView
-                android:id="@+id/claimIdStub"
+                android:id="@+id/ten_claimIdStub"
                 android:layout_weight="0"
                 android:layout_height="0dp"
                 android:layout_width="0dp"
 
                 />
 
-
             <Switch
-                android:id="@+id/redeemedSwitch"
+                android:id="@+id/ten_redeemedSwitch"
                 android:layout_weight="2"
                 android:gravity="right"
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:theme="@style/SwitchTheme"
                 android:switchMinWidth="70dp"
                 android:checked="false"
                />
+
+
 
         </TableRow>
     </TableLayout>
