Bug fixing on Code Verification

--- a/app/src/main/res/layout/fragment_redeem_claim.xml
+++ b/app/src/main/res/layout/fragment_redeem_claim.xml
@@ -61,6 +61,8 @@
         </TableLayout>
     </LinearLayout>
 
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,6 +71,7 @@
         android:orientation="vertical">
 
         <ScrollView
+            android:id="@+id/redeemScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
           android:padding="20dp">
@@ -77,7 +80,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
 
             <Spinner
                 android:id="@+id/city"
@@ -131,18 +133,8 @@
                 tools:listitem="@layout/single_claim_recycler_view" />
 
                 <android.support.v7.widget.RecyclerView
-                    android:id="@+id/ten_recycler"
-                    android:layout_marginTop="0dp"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layoutManager="LinearLayoutManager"
-                    android:layout_marginBottom="0dp"
-                    tools:listitem="@layout/ten_claim_recycler_view" />
-
-                <android.support.v7.widget.RecyclerView
                     android:id="@+id/twenty_recycler"
-                    android:layout_marginTop="0dp"
+                    android:layout_marginTop="5dp"
                     android:layout_width="fill_parent"
                     app:layoutManager="LinearLayoutManager"
                     android:orientation="horizontal"
