--- a/app/src/main/res/layout/fragment_assess_client.xml
+++ b/app/src/main/res/layout/fragment_assess_client.xml
@@ -386,7 +386,7 @@ android:alpha="0.95"
                 android:id="@+id/latitude"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/et_bg"
+                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                 android:enabled="false"
                 android:layout_marginTop="10dp"
                 android:text="Loading Latitude..."
@@ -397,7 +397,7 @@ android:alpha="0.95"
                 android:id="@+id/longitude"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/et_bg"
+                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                 android:enabled="false"
                 android:layout_marginTop="10dp"
                 android:text="loading Longitude..."
